--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -59,7 +59,7 @@
         </div>
         <div class="col col-12 col-sm-5 col-md-5 col-lg-5 col-xl-5 col-xxl-5">
             <h1>1. Bloom</h1>
-            <h3>><i>Add 1-2 tsp water to a small bowl. Sprinkle color over water; let stand for 2 minutes.</i></h3>
+            <h3><i>Add 1-2 tsp water to a small bowl. Sprinkle color over water; let stand for 2 minutes.</i></h3>
         </div>
     </div>
     <br>
