--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,7 +9,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
           </li>
-          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/about">About</a>
+          </li>
         </ul>
         
       </div>
