--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -15,6 +15,9 @@
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" routerLink="/recipe">Recipe</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" routerLink="/contact">Contact</a>
+          </li>
         </ul>
         
       </div>
